[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "oslo.metrics"
description = "Oslo Metrics library"
readme = "README.rst"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies"]

[project.scripts]
oslo-metrics = "oslo_metrics.__main__:main"

[project.urls]
Homepage = "https://docs.openstack.org/oslo.metrics"
Repository = "https://opendev.org/openstack/oslo.metrics"

[tool.setuptools]
packages = ["oslo_metrics"]

[tool.mypy]
python_version = "3.10"
show_column_numbers = true
show_error_context = true
strict = true
disable_error_code = ["import-untyped"]
exclude = '(?x)(doc | examples | releasenotes)'

[[tool.mypy.overrides]]
module = ["oslo_metrics.tests.*"]
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_subclassing_any = false
disallow_any_generics = false

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["C4", "E4", "E5", "E7", "E9", "F", "S", "UP"]
ignore = [
    # we only use asserts for type narrowing
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"oslo_metrics/tests/*" = ["S"]

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true
skip-magic-trailing-comma = true
