[metadata]
name = oslo.metrics
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = Oslo Metrics API
description-file =
    README.rst
home-page = https://opendev.org/openstack/oslo.metrics
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_metrics