[metadata]
name = oslo.metrics
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
summary = Oslo Metrics API
description_file =
    README.rst
home_page = https://opendev.org/openstack/oslo.metrics
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    oslo_metrics

[entry_points]
console_scripts =
    oslo-metrics = oslo_metrics.__main__:main
